# ai-teacher-clone

./: .gitignore  Makefile  main.py  pyproject.toml  scripts.sh
docs/: README.md
docs/api/: api_design_document.md  openapi_spec.yaml
docs/deployment/: deployment_guide.md  docker-compose.yml
docs/design/: database_design.md  system_design_document.md
docs/project/: project_management.md  risk_register.md
docs/requirements/: product_requirements_document.md  user_stories.md
docs/technical/: technical_solution.md
docs/testing/: test_cases.md  test_plan.md
frontend/: package-lock.json
src/: main.py
